# rust_auth_example

./: Cargo.toml  readme.md
migrations/: 20230331124716_users.sql  20230331124723_invitations.sql
src/: api.rs  auth_handler.rs  db.rs  email_service.rs  errors.rs  invitation_handler.rs  main.rs  models.rs  register_handler.rs  utils.rs
static/: index.html  main.css  main.js  register.html
