[package]
name = "web-basic-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-identity = "0.5"
actix-cors = "0.6"

futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"

dotenv = "0.15"
env_logger = "0.10"
log = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# tokio + rustls
#sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "sqlite", "postgres" ] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "offline", "uuid", "time", "chrono"] }

rust-argon2 = "1"
time = "0.3"
uuid = { version = "1.3", features = [ "serde", "v4" ] }
once_cell = "1.8"

# email service
sparkpost = "0.5"